2005-08-30  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/ipmi-kcs-interface.c (ipmi_kcs_cmd2): Fixed bug
	in error condition check.

2005-08-30  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/ipmi-semaphores.h (IPMI_MUTEX_LOCK): Continues
	only for non-zero semid.

	* libfreeipmi/src/ipmi-semaphores.h (IPMI_MUTEX_UNLOCK): like
	wise.

2005-08-30  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/ipmi-interface.c (ipmi_open_outofband): It
	doesn't call ipmi_open().

	* libfreeipmi/src/ipmi-interface.c (ipmi_open_inband): Improved.

	* libfreeipmi/src/ipmi-kcs-interface.c (ipmi_kcs_cmd2): Rewritten.

2005-08-29  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/ipmi-interface.c (ipmi_inband_close): Fixed
	portability bug.

2005-08-27  A Balamurugan  <bala@zresearch.com>

	* doc/version.texi: New file.

	* doc/examples/ipmi-lan-test-udm.c: New file.

	* libfreeipmi/src/ipmi-interface.[c,h]: New files.  Implements
	unified driver model.

	* bmc-watchdog/src/bmc-watchdog.c (_get_port_and_reg_space): Uses
	ipmi_driver_type_t enum.

	* doc/freeipmi.texi: Removed profiling support for sensors node.

	* doc/examples/Makefile.am: Updated.

	* doc/examples/ipmi-lan-test.c: Updated.

	* fish/src/extension.c: Removed fi-kcs-get-poll-count procedure.

	* fish/src/ipmi-wrapper.c: Removed auth_code_len in
	ipmi_lan_open_session().

	* fish/src/scm-procedures.[c,h]: Removed function
	ex_kcs_get_poll_count().

	* libfreeipmi/src/Makefile.am: Updated.

	* libfreeipmi/src/acpi-spmi-locate.[c,h]: Uses
	ipmi_interface_type_t enum.

	* libfreeipmi/src/fiid.c (fiid_obj_free): Uses ipmi_xfree().

	* libfreeipmi/src/fiid.h (FIID_OBJ_ALLOC): Updated -
	fiid_obj_alloc accepts tmpl directly now.

	* libfreeipmi/src/freeipmi.h: Updated.

	* libfreeipmi/src/ipmi-dev-global-cmds.[c,h]: Added new function
	ipmi_cmd_get_dev_id().

	* libfreeipmi/src/ipmi-kcs-interface.[c,h]: Now
	ipmi_kcs_get_status(), ipmi_kcs_wait_for_ibf_clear(),